sumo/tests/dfrouter/errors/unknown_option/options.dfrouter
--net-file=net.net.xml --test_this_funky_but_not_existing_option
